# sift

./: .gitignore  Cargo.toml  build.rs  readme.md
.github/workflows/: release.yml
src/: args.rs  config.rs  csv_writer.rs  encryption.rs  file_handler.rs  lib.rs  main.rs  run.rs  run_old.rs  scan.rs  scan_manager.rs  scan_settings.rs  scanner.rs  settings.rs
src/archive/: scan_old.rs
