[package]
name = "sift"
version = "0.1.0"
authors = ["Bryan Vinton"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.6"
serde = { version = "1", features = ["derive"] }
confy = "0.5"
hex = "0.4.3"
rust-crypto = "0.2"
rand = "0.8.5"
pbkdf2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
# rusqlite = "0.28"
rpassword = "7.2.0"
jwalk = "^0.8"
chrono = "^0.4"
regex = "1"
crossbeam = "0.8.2"
pdf-extract = "0.6.4"
dotext = "0.1.1"
indicatif = "0.17.3"
zip = "0.6.4"
xml-rs = "0.8.4"
csv = "1.2.1"
# rayon = "1.7.0"
log = "0.4.17"
log4rs = "1.2.0"